# Soul

./: .gitignore  .gitmodules  CMakeLists.txt  EDA_benchmarking.ipynb  README.md  requirements.txt  run_ann_lenet.py  run_ann_wireless.py  run_efficiency.py  run_infer.py  run_lenet.py  run_noise.py  run_ops_energy.py  run_sim.py  run_soul.py  run_theoretical_energy.py  run_timing.py  run_train_noise.py  sample_generator.py
EDA/: EDA_benchmarking.ipynb  topology-res.csv
bench1-neuronal/: README.md  dataset.py  power_check.py  test.py  utils.py
bench1-neuronal/model/: ILIF.py  SewResNet.py  SpikingVGG9.py  __init__.py  base.py
bench1-neuronal/shell/: caltech101.sh  cifar10.sh  nmnist.sh  spikformer.sh  tinyimagenet.sh
bench2-lightweight/: readme.md
bench2-lightweight/pruning/: img2col.py  main.py
bench2-lightweight/quantization/: Q_SpikingVGG9.py  test.py
bench3-devices/: readme.md  sew_resnet.py  train.py
demo/: EDA_appendix.ipynb  EDA_benchmarking.ipynb  EDA_main.ipynb  eval_latency.py  topology-res.csv  train_rate.py
doc/source/: concepts.rst  concepts_en.rst  conf.py  encoding.rst  encoding_en.rst  getting_started.rst  getting_started_en.rst  gradient.rst  gradient_en.rst  index.rst  index_zh.rst  metrics.rst  metrics_en.rst  neuron.rst  neuron_en.rst  params.rst  params_en.rst
examples/bench1-neuronal/: README.md  imagenet_io.py  train.py
examples/bench3-devices/: local.py  prepare.py  readme.md  service.py  test.py  test_all.py
scripts/: train_ddp.sh  train_single.sh
src/: bindings.cpp
temp/: eval_footprint.py  run_noise.py
(+467 files in other folders)
